...
import com.android.ootd.ui.theme.Typography
import com.android.ootd.utils.composables.ImageSelectionDialog
import com.android.ootd.utils.composables.ProfilePicture
import kotlinx.coroutines.launch

object CommentScreenTestTags {
  const val COMMENT_BOTTOM_SHEET = "commentBottomSheet"
  const val CLOSE_COMMENTS_BUTTON = "closeCommentsButton"
  const val COMMENTS_LIST = "commentsList"
  const val COMMENT_ITEM = "commentItem"
  const val REACTION_IMAGE = "reactionImage"
  const val DELETE_COMMENT_BUTTON = "deleteCommentButton"
  const val ADD_COMMENT_SECTION = "addCommentSection"
...
